--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-camera": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
